[depthFirstSearch] Added SQL files and depthFirstSearch.c

--- a/configuration.conf
+++ b/configuration.conf
@@ -40,6 +40,7 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y 
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
+depthFirstSearch    | Y | Y | N
 #----------------------
 # SQL only directories
 #----------------------
