entry of ltdtree

--- a/configuration.conf
+++ b/configuration.conf
@@ -42,6 +42,7 @@ transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 traversal           | Y | Y | Y
 coloring            | Y | Y | Y
+ltdtree             | N | N | N
 #----------------------
 # SQL only directories
 #----------------------
