--- a/configuration.conf
+++ b/configuration.conf
@@ -40,7 +40,7 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y 
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-ltdtree             | N | Y | N
+LTDTree             | N | Y | N
 #----------------------
 # SQL only directories
 #----------------------
