[LTDTree]fixing cpp errors

--- a/configuration.conf
+++ b/configuration.conf
@@ -42,7 +42,7 @@ transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 traversal           | Y | Y | Y
 coloring            | Y | Y | Y
-LTDTree             | N | Y | N
+LTDTree             | Y | Y | N
 #----------------------
 # SQL only directories
 #----------------------
