--- a/docqueries/LTDTree/test.conf
+++ b/docqueries/LTDTree/test.conf
@@ -2,7 +2,7 @@
 
 %main::tests = (
     'any' => {
-        'comment' => 'lengauer_tarjan_dominator_tree algorithm tests',
+        'comment' => 'LTDTree algorithm tests.',
         'data' => [ ],
         'tests' => [qw(
             doc-LTDTree
