[depthFirstSearch] [doc] Enabled documentation in the configuration file

--- a/configuration.conf
+++ b/configuration.conf
@@ -37,10 +37,10 @@ chinese             | Y | Y | Y
 spanningTree        | Y | Y | Y
 mincut              | Y | Y | Y
 version             | Y | Y | Y
-topologicalSort     | Y | Y | Y 
+topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-depthFirstSearch    | Y | Y | N
+depthFirstSearch    | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
