[depthFirstSearch] Added the new tests in test.conf file

--- a/docqueries/depthFirstSearch/test.conf
+++ b/docqueries/depthFirstSearch/test.conf
@@ -6,6 +6,7 @@
         'data' => [ ],
         'tests' => [qw(
             doc-pgr_depthFirstSearch
+            depthFirstSearch-issue1348-usage
             )],
         'documentation' => [qw(
             doc-pgr_depthFirstSearch
