[sequentialVertexColoring] Changed developer name in template comments

--- a/sql/graphColoring/CMakeLists.txt
+++ b/sql/graphColoring/CMakeLists.txt
@@ -3,7 +3,7 @@ SET(LOCAL_FILES
     sequentialVertexColoring.sql
     )
 
-# Do not modify bellow this line
+# Do not modify below this line
 
 foreach (f ${LOCAL_FILES})
     configure_file(${f} ${f})
