[sequentialVertexColoring] Added graphColoring in configuration file

--- a/configuration.conf
+++ b/configuration.conf
@@ -41,6 +41,7 @@ topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 depthFirstSearch    | Y | Y | Y
+graphColoring       | Y | Y | N
 #----------------------
 # SQL only directories
 #----------------------
