[sequentialVertexColoring] Modified CMakeLists file

--- a/src/graphColoring/CMakeLists.txt
+++ b/src/graphColoring/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_LIBRARY(sequentialVertexColoring OBJECT
+ADD_LIBRARY(graphColoring OBJECT
     sequentialVertexColoring.c
     sequentialVertexColoring_driver.cpp
     )
