--- a/configuration.conf
+++ b/configuration.conf
@@ -40,7 +40,7 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-kargersContraction  | Y | Y | N
+kargersContraction  | N | N | N
 planarGraph         | Y | Y | Y
 makeConnected       | Y | Y | N
 #----------------------
