--- a/configuration.conf
+++ b/configuration.conf
@@ -41,7 +41,7 @@ topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 kargersContraction  | N | N | N
-planarGraph         | Y | Y | Y
+planarGraph         | Y | Y | N
 makeConnected       | Y | Y | N
 #----------------------
 # SQL only directories
