--- a/configuration.conf
+++ b/configuration.conf
@@ -34,7 +34,7 @@ bellman_ford        | Y | Y | Y
 cpp_common          | Y | N | N
 dagShortestPath     | Y | Y | Y
 chinese             | Y | Y | Y
-spanningTree        | N | N | N
+spanningTree        | Y | Y | Y
 mincut              | Y | Y | Y
 version             | Y | Y | Y
 topologicalSort     | Y | Y | Y
@@ -42,7 +42,7 @@ transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 traversal           | Y | Y | Y
 coloring            | Y | Y | Y
-LTDTree             | Y | Y | N
+LTDTree             | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
