--- a/configuration.conf
+++ b/configuration.conf
@@ -34,13 +34,13 @@ bellman_ford        | Y | Y | Y
 cpp_common          | Y | N | N
 dagShortestPath     | Y | Y | Y
 chinese             | Y | Y | Y
-spanningTree        | N | N | N
+spanningTree        | Y | Y | Y
 mincut              | Y | Y | Y
 version             | Y | Y | Y
 topologicalSort     | Y | Y | Y 
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-LTDTree             | Y | Y | N
+LTDTree             | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
