--- a/configuration.conf
+++ b/configuration.conf
@@ -40,8 +40,8 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-planarGraph         | N | N | N
-makeConnected       | N | N | N
+planarGraph         | Y | Y | N
+makeConnected       | Y | Y | N
 #----------------------
 # SQL only directories
 #----------------------
