--- a/configuration.conf
+++ b/configuration.conf
@@ -43,6 +43,7 @@ breadthFirstSearch  | Y | Y | Y
 traversal           | Y | Y | Y
 coloring            | Y | Y | Y
 LTDTree             | Y | Y | Y
+bipartite           | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
