--- a/configuration.conf
+++ b/configuration.conf
@@ -41,6 +41,7 @@ topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 LTDTree             | Y | Y | Y
+bipartite           | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
