--- a/configuration.conf
+++ b/configuration.conf
@@ -40,7 +40,8 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y 
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-LTDTree             | Y | Y | N
+LTDTree             | Y | Y | Y
+bipartite           | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
