--- a/configuration.conf
+++ b/configuration.conf
@@ -40,7 +40,7 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-planarGraph         | Y | Y | N
+planar              | Y | Y | N
 makeConnected       | Y | Y | N
 #----------------------
 # SQL only directories
