--- a/sql/planar/CMakeLists.txt
+++ b/sql/planar/CMakeLists.txt
@@ -2,6 +2,8 @@
 SET(LOCAL_FILES
     _boyerMyrvold.sql
     boyerMyrvold.sql
+    _isPlanar.sql
+    isPlanar.sql
     )
 
 foreach (f ${LOCAL_FILES})
