Docqueries added for pgr_isPlanar

--- a/docqueries/planar/test.conf
+++ b/docqueries/planar/test.conf
@@ -9,6 +9,7 @@
             )],
         'documentation' => [qw(
             doc-pgr_boyerMyrvold
+            doc-pgr_isPlanar
             )]
     },
 
