bool driver.h file added

--- a/docqueries/planar/test.conf
+++ b/docqueries/planar/test.conf
@@ -6,6 +6,7 @@
         'data' => [ ],
         'tests' => [qw(
             doc-pgr_boyerMyrvold
+            doc-pgr_isPlanar
             )],
         'documentation' => [qw(
             doc-pgr_boyerMyrvold
