--- a/configuration.conf
+++ b/configuration.conf
@@ -40,8 +40,8 @@ version             | Y | Y | Y
 topologicalSort     | Y | Y | Y
 transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
-planar              | Y | Y | N
-makeConnected       | Y | Y | N
+planar              | Y | Y | Y
+makeConnected       | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
