changed directory name

--- a/configuration.conf
+++ b/configuration.conf
@@ -42,7 +42,7 @@ transitiveClosure   | Y | Y | Y
 breadthFirstSearch  | Y | Y | Y
 traversal           | Y | Y | Y
 coloring            | Y | Y | Y
-LTDTree             | Y | Y | Y
+dominator           | Y | Y | Y
 bipartite           | Y | Y | Y
 #----------------------
 # SQL only directories
