--- a/configuration.conf
+++ b/configuration.conf
@@ -43,7 +43,7 @@ breadthFirstSearch  | Y | Y | Y
 traversal           | Y | Y | Y
 coloring            | Y | Y | Y
 dominator           | Y | Y | Y
-bipartite           | Y | Y | Y
+coloring            | Y | Y | Y
 #----------------------
 # SQL only directories
 #----------------------
